2007-04-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriterTraceListener.cs : new file, implementated.
	* TraceListener.cs : implemented 2.0 members.

2007-03-04  Vladimir Krasnov  <vlaimdirk@mainsoft.com>

	* DiagnosticsConfigurationHandler.cs: removed configuration init in
	TARGET_JVM since not supported

2007-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* EventLogImpl.cs: When no log name is specified, return zero-length
	string for LogDisplayName.

2007-01-28 Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* TraceEventCache.jvm.cs: added as a stub class.

Tue Jan 23 17:19:13 CET 2007 Paolo Molaro <lupus@ximian.com>

	* ProcessStartInfo.cs: put the fields in the order expected
	by the runtime code.

2007-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* Switch.cs : added missing .ctor(), Attributes, Value, 
	  GetSupportedAttributes() and OnValueChanged().
	* DiagnosticsConfigurationHandler.cs : added some hacky handler for
	  new "sources" element. Don't wrap another ConfigurationException.
	* TraceListener.cs : added missing trace methods.
	* TraceSource.cs, SourceLevels.cs, CorrelationManager.cs,
	  TraceEventCache.cs, TraceEventType.cs, SourceSwitch.cs:
	  added missing 2.0 stuff, mostly just stubs.

2007-01-12  Miguel de Icaza  <miguel@novell.com>

	* Trace.cs: Add a number of 2.0 overloads.

2007-01-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* Process.cs: Allow GetProcesses and GetProcessById overloads with 
	machine name to work for local machine.

2006-12-29  Robert Jordan  <robertj@gmx.net>

	* TraceImpl.cs (Assert): Include line numbers in the stack trace
	emitted by Assert (). Fixes bug #80400.

Thu Dec 14 20:24:09 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Process.cs: if a process object is restarted, close the
	previous process handle (bug #80143).

2006-11-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: the Process returned by the static Start method never had
	the right ProcessStartInfo. Fixes bug #80019.
