@@ -41,11 +41,36 @@ namespace System.Diagnostics {
 
 	public abstract class TraceListener : MarshalByRefObject, IDisposable {
 
+#if TARGET_JVM
+		readonly LocalDataStoreSlot _indentLevelStore = System.Threading.Thread.AllocateDataSlot ();
+		readonly LocalDataStoreSlot _indentSizeStore = System.Threading.Thread.AllocateDataSlot ();
+		
+		private int indentLevel {
+			get {
+				object o = System.Threading.Thread.GetData (_indentLevelStore);
+				if (o == null)
+					return 0;
+				return (int) o;
+			}
+			set { System.Threading.Thread.SetData (_indentLevelStore, value); }
+		}
+		
+		private int indentSize {
+			get {
+				object o = System.Threading.Thread.GetData (_indentSizeStore);
+				if (o == null)
+					return 4;
+				return (int) o;
+			}
+			set { System.Threading.Thread.SetData (_indentSizeStore, value); }
+		}
+#else
 		[ThreadStatic]
 		private int indentLevel = 0;
 
 		[ThreadStatic]
 		private int indentSize = 4;
+#endif
 
 		private string name = null;
 		private bool needIndent = true;
