@@ -1,3 +1,10 @@
+2007-05-08 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* TraceImpl.cs:
+	* TraceListener.cs:
+	for TARGET_JVM used Thread Local Storage istead 
+	Thread-Relative Static Fields 
+
 2007-04-19  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlWriterTraceListener.cs : new file, implementated.
